--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td> <input type="checkbox" class="check" id="1"></td>
+                    <td> <input type="checkbox" class="check" id="example"></td>
                     <td class="task">Do Laundry</td>
                     <td>10-19-2025</td>
                 </tr>
@@ -35,6 +35,7 @@
             </tfoot>
         </table>
         <td><button id="new-task">New Task</button></td>
+        <td><button id="del-task">Delete</button></td>
     <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
